--- a/index.html
+++ b/index.html
@@ -99,14 +99,15 @@
         </ul>
         <ul class="nav__social-list--desktop nav__social-list--svg">
           <li class="nav__social-item">
-            <a href="#" class="link-social">
+            <a href="https://www.facebook.com/armaxMG" class="link-social">
               <svg class="link-social--svg" width="25" height="25">
                 <use xlink:href="#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="nav__social-item">
-            <a href="#" class="link-social">
+            <a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
+              class="link-social">
               <svg class="link-social--svg" width="25" height="25">
                 <use xlink:href="#location"></use>
               </svg>
@@ -114,25 +115,25 @@
           </li>
         </ul>
       </div>
-     
+
     </div>
 
     <div class="header__container container">
       <div class="menu">
         <button class="burger-btn" href="#"><span></span></button>
-        <h1 class="menu__title"><a class="menu__link-logo" href=" #"><img class="menu__logo" src=" img/logo.png"
+        <h1 class="menu__title"><a class="menu__link-logo" href="#"><img class="menu__logo" src=" img/logo.png"
               alt=""></a></h1>
         <nav class="nav">
           <div class="nav__inner">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="calc.html" class="link-hover">Послуги</a>
+                <a href="services.html" class="link-hover">Послуги</a>
               </li>
               <li class="nav__item">
-                <a href="calc.html" class="link-hover">Про нас</a>
+                <a href="about-us.html" class="link-hover">Про нас</a>
               </li>
               <li class="nav__item">
-                <a href="calc.html" class="link-hover">Контакти</a>
+                <a href="contacts.html" class="link-hover">Контакти</a>
               </li>
               <li class="nav__item">
                 <a href="calc.html" class="link-hover">Калькулятор металу</a>
@@ -165,7 +166,8 @@
                 </a>
               </li>
               <li class="nav__item-social">
-                <a href="#" class="link-social">
+                <a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
+                  class="link-social">
                   <svg class="link-social--svg" width="30" height="30">
                     <use xlink:href="#location"></use>
                   </svg>
@@ -174,7 +176,7 @@
               </li>
             </ul>
           </div>
-          
+
         </nav>
       </div>
 
@@ -194,7 +196,7 @@
           <form class="header__form" action="">
             <input class="input-name" type="text" placeholder="Ім'я">
             <input class="input-number" type="tel" placeholder="Телефон">
-            <button class="button header__content-button" type="submit">Надіслати</button>
+            <button class="button__disabled header__content-button " type="submit" disabled>Надіслати</button>
           </form>
         </div>
       </div>
@@ -206,9 +208,9 @@
       <section class="section preview">
         <p class="section__title">Виконуємо комплексну високоточну металообробку на верстатах з ЧПУ</p>
         <p class="section__text">Надаємо комплекс послуг з обробки металу —
-          <a class="preview__link" href="#">лазерна порізка,</a>
-          <a class="preview__link" href="#">гнуття деталей,</a>
-          <a class="preview__link" href="#">зварювання</a>
+          <a class="preview__link" href="lazer.html">лазерна порізка,</a>
+          <a class="preview__link" href="lazer.html">гнуття деталей,</a>
+          <a class="preview__link" href="lazer.html">зварювання</a>
           металевих виробів та форм
           високої складності. Виробництво деталей для важкої і легкої промисловості, а також складних і відповідальних
           компонентів для точного обладнання.
@@ -231,17 +233,17 @@
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
-                <a class="services__name-link" href="#">
+                <a class="services__name-link" href="lazer.html">
                   Лазерна порізка
                 </a>
               </div>
               <div class="services__hover-content">
                 <h4 class="services__hover-title">Лазер дозволяє виконувати як легкі, так і складні деталі, гарантуючи
                   високу точність і відмінну швидкість роботи.</h4>
-                <a class="services__hover-text" href="#">
+                <a class="services__hover-text" href="lazer.html">
                   <span class="services__hover--circle">Детальніше</span>
                 </a>
-                <a class="services__link" href="#"></a>
+                <a class="services__link" href="lazer.html"></a>
               </div>
 
             </figcaption>
@@ -255,17 +257,17 @@
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
-                <a class="services__name-link" href="#">
+                <a class="services__name-link" href="lazer.html">
                   Гнуття деталей
                 </a>
               </div>
               <div class="services__hover-content">
                 <h4 class="services__hover-title">Гнуття металу - э однією з основних сфер застосування листового
                   металу є виготовлення виробів із зігнутих листових деталей.</h4>
-                <a class="services__hover-text" href="#">
+                <a class="services__hover-text" href="lazer.html">
                   <span class="services__hover--circle">Детальніше</span>
                 </a>
-                <a class="services__link" href="#"></a>
+                <a class="services__link" href="lazer.html"></a>
               </div>
 
             </figcaption>
@@ -279,17 +281,17 @@
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
-                <a class="services__name-link" href="#">
+                <a class="services__name-link" href="lazer.html">
                   Порошкове фарбування
                 </a>
               </div>
               <div class="services__hover-content">
                 <h4 class="services__hover-title">Порошкове фарбування металевих виробів забезпечує високу якість
                   покриття., зберігає відмінні фізико-хімічні та оздоблювальні характеристики.</h4>
-                <a class="services__hover-text" href="#">
+                <a class="services__hover-text" href="lazer.html">
                   <span class="services__hover--circle">Детальніше</span>
                 </a>
-                <a class="services__link" href="#"></a>
+                <a class="services__link" href="lazer.html"></a>
               </div>
 
             </figcaption>
@@ -303,17 +305,17 @@
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
-                <a class="services__name-link" href="#">
+                <a class="services__name-link" href="lazer.html">
                   Усі послуги
                 </a>
               </div>
               <div class="services__hover-content">
                 <h4 class="services__hover-title">Виконуємо нестандартні та ексклюзивні замовлення на прохання
                   клієнтів - великих промислових підприємств, комерційних організацій і виробничих фірм.</h4>
-                <a class="services__hover-text" href="#">
+                <a class="services__hover-text" href="lazer.html">
                   <span class="services__hover--circle">Детальніше</span>
                 </a>
-                <a class="services__link" href="#"></a>
+                <a class="services__link" href="lazer.html"></a>
               </div>
             </figcaption>
           </figure>
@@ -340,7 +342,7 @@
             </div>
             <div class="featured__content">
               <p class="featured__content-title">Якість</p>
-              <p class="featured__content-text">Єврометал працює тільки з перевіреними постачальниками і виробникам</p>
+              <p class="featured__content-text">Армакс МГ працює тільки з перевіреними постачальниками і виробникам</p>
             </div>
           </div>
           <div class="featured__card">
@@ -451,7 +453,7 @@
               <label class="calculation__label" for="file">Завантажити файл:</label>
               <input class="calculation__input-file" type="file" id="file">
 
-              <button class="button header__content-button" type="submit">Надіслати</button>
+              <button class="header__content-button button__disabled" type="submit" disabled>Надіслати</button>
             </form>
           </div>
 
@@ -475,20 +477,20 @@
           <div class="info__block info__menu">
             <h5 class="info__title">Меню</h5>
             <ul>
-              <li class="info__item"><a class="info__link" href="#">Послуги</a></li>
-              <li class="info__item"><a class="info__link" href="#">Про нас</a></li>
-              <li class="info__item"><a class="info__link" href="#">Контакти</a></li>
-              <li class="info__item"><a class="info__link" href="#">Калькуоятор металу</a></li>
+              <li class="info__item"><a class="info__link" href="services.html">Послуги</a></li>
+              <li class="info__item"><a class="info__link" href="about-us.html">Про нас</a></li>
+              <li class="info__item"><a class="info__link" href="contacts.html">Контакти</a></li>
+              <li class="info__item"><a class="info__link" href="calc.html">Калькуоятор металу</a></li>
             </ul>
           </div>
           <div class="info__block info__schedule">
             <h5 class="info__title">Послуги</h5>
             <ul class="info__list">
-              <li class="info__item"><a href="#" class="info__link">Лазерна порізка</a></li>
-              <li class="info__item"><a href="#" class="info__link">Гнуття деталей</a></li>
-              <li class="info__item"><a href="#" class="info__link">Гнуття труб</a></li>
-              <li class="info__item"><a href="#" class="info__link">Порошкове фарбування</a></li>
-              <li class="info__item"><a href="#" class="info__link">Зварювальні роботи</a></li>
+              <li class="info__item"><a href="lazer.html" class="info__link">Лазерна порізка</a></li>
+              <li class="info__item"><a href="lazer.html" class="info__link">Гнуття деталей</a></li>
+              <li class="info__item"><a href="lazer.html" class="info__link">Гнуття труб</a></li>
+              <li class="info__item"><a href="lazer.html" class="info__link">Порошкове фарбування</a></li>
+              <li class="info__item"><a href="lazer.html" class="info__link">Зварювальні роботи</a></li>
 
             </ul>
           </div>
@@ -496,7 +498,8 @@
             <h5 class="info__title">Адреса</h5>
             <ul class="info__list">
               <li class="info__item">
-                <a href="#" class="link-social">
+                <a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
+                  class="link-social">
                   <svg class="link-social--svg" width="30" height="30">
                     <use xlink:href="#location"></use>
                   </svg>
@@ -540,7 +543,7 @@
                 </a>
               </li>
               <li class="info__item">
-                <a href="#" class="link-social">
+                <a href="https://www.facebook.com/armaxMG" class="link-social">
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#facebook"></use>
                   </svg>
@@ -557,6 +560,7 @@
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/swiper.js"></script>
 
 
 </body>
