--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </a>
               </li>
               <li class="nav__item-social">
-                <a href="#" class="link-social">
+                <a href="https://www.facebook.com/armaxMG" class="link-social">
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#facebook"></use>
                   </svg>
