--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <svg class="link-social--svg" width="30" height="20">
                 <use xlink:href="#mail"></use>
               </svg>
-              lazerarmax@gmail.com
+              lazer.armax@gmail.com
             </a>
           </li>
         </ul>
@@ -154,7 +154,7 @@
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#mail"></use>
                   </svg>
-                  lazerarmax@gmail.com
+                  lazer.armax@gmail.com
                 </a>
               </li>
               <li class="nav__item-social">
@@ -380,6 +380,117 @@
       </div>
     </section>
 
+    <section class="section ware">
+      <div class="container">
+        <h3 class="section__title">
+          Вироби з металу на замовлення нашого виробництва
+        </h3>
+        <p class="section__text section--center-text">
+          Виготовлення дрібних та складних деталей із металу, а також послуги з механічної обробки деталей виконуємо на
+          верстатах з ЧПУ. Беремо в роботу навіть найскладніші замовлення – нестандартні
+          <a class="preview__link" href="lazer.html">
+            вироби з металу</a>.
+          Виконуємо великі
+          обсяги. Ці та багато інших вироби з металу ми робимо на нашому виробництві на замовлення.
+        </p>
+
+        <div class="ware__box">
+          <article class="ware__card">
+            <figure class="ware__content">
+              <picture>
+                <img class="ware__img" src="img/table-legs.jpg" alt="table-legs" width="auto" height="220">
+
+              </picture>
+              <figcaption class="ware__figcaption">
+                <div class="ware__name">
+                  <a class="ware__name-link" href="lazer.html">
+                    Ніжки для меблів
+                  </a>
+                </div>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="ware__card">
+            <figure class="ware__content">
+              <picture>
+                <img class="ware__img" src="img/decorative-cut.jpg" alt="table-legs" width="auto" height="220">
+
+              </picture>
+              <figcaption class="ware__figcaption">
+                <div class="ware__name">
+                  <a class="ware__name-link" href="lazer.html">
+                    Декоративні елементи
+                  </a>
+                </div>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="ware__card">
+            <figure class="ware__content">
+              <picture>
+                <img class="ware__img" src="img/furniture-accessories.jpg" alt="table-legs" width="auto" height="220">
+
+              </picture>
+              <figcaption class="ware__figcaption">
+                <div class="ware__name">
+                  <a class="ware__name-link" href="lazer.html">
+                    Меблева фурнітура
+                  </a>
+                </div>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="ware__card">
+            <figure class="ware__content">
+              <picture>
+                <img class="ware__img" src="img/grain-bucket.jpg" alt="table-legs" width="auto" height="220">
+
+              </picture>
+              <figcaption class="ware__figcaption">
+                <div class="ware__name">
+                  <a class="ware__name-link" href="lazer.html">
+                    Зернові ковші
+                  </a>
+                </div>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="ware__card">
+            <figure class="ware__content">
+              <picture>
+                <img class="ware__img" src="img/metal-bracket.jpg" alt="table-legs" width="auto" height="220">
+
+              </picture>
+              <figcaption class="ware__figcaption">
+                <div class="ware__name">
+                  <a class="ware__name-link" href="lazer.html">
+                    Металеві кронштейни
+                  </a>
+                </div>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="ware__card">
+            <figure class="ware__content">
+              <picture>
+                <img class="ware__img" src="img/metal-furniture.jpg" alt="table-legs" width="auto" height="220">
+
+              </picture>
+              <figcaption class="ware__figcaption">
+                <div class="ware__name">
+                  <a class="ware__name-link" href="lazer.html">
+                    Меблі з профільної труби
+                  </a>
+                </div>
+              </figcaption>
+            </figure>
+          </article>
+        </div>
+
+      </div>
+
+    </section>
+
     <section class="section partners">
       <div class="container">
         <div>
@@ -415,13 +526,13 @@
       <div class="calculation__inner ">
         <div class="calculation__wrapper container">
           <div class="calculation__content">
-            <h3 class="section__title">Замовити прорахунок проекту</h3>
+            <h3 class="section__title calculation__title">Замовити прорахунок проекту</h3>
             <ul class="calculation__list">
               <li class="calculation__item">
                 <p class="calculation__text">
                   Для швидкого прорахунку вартості замовлення, завантажте креслення готових
                   деталей та їх плоскої розгортки у форматі DWG або DXF за допомогою форми або надішліть їх на пошту
-                  lazerarmax@gmail.com
+                  lazer.armax@gmail.com
                 </p>
               </li>
               <li class="calculation__item">
@@ -539,7 +650,7 @@
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#mail"></use>
                   </svg>
-                  lazerarmax@gmail.com
+                  lazer.armax@gmail.com
                 </a>
               </li>
               <li class="info__item">
