--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 
@@ -225,7 +226,7 @@
     <section class="section services">
       <h3 class="section__title services__title">Наші послуги</h3>
       <div class="services__container">
-        <article class="services__card">
+        <article class="services__card" data-aos="fade-down">
           <figure class="services__content">
             <picture>
               <img class="services__img" src="img/lazer.jpg" alt="1" width="300" height="200">
@@ -249,7 +250,7 @@
             </figcaption>
           </figure>
         </article>
-        <article class="services__card">
+        <article class="services__card" data-aos="fade-down">
           <figure class="services__content">
             <picture>
               <img class="services__img" src="img/sheet-bending.jpg" alt="sheet-bending" width="300" height="200">
@@ -273,7 +274,7 @@
             </figcaption>
           </figure>
         </article>
-        <article class="services__card">
+        <article class="services__card" data-aos="fade-up">
           <figure class="services__content">
             <picture>
               <img class="services__img" src="img/powder-painting.jpg" alt="lazer" width="300" height="200">
@@ -297,7 +298,7 @@
             </figcaption>
           </figure>
         </article>
-        <article class="services__card">
+        <article class="services__card" data-aos="fade-up">
           <figure class="services__content">
             <picture>
               <img class="services__img" src="img/metal-products.jpg" alt="lazer" width="300" height="200">
@@ -336,7 +337,7 @@
           наших Клієнтів!!!
         </p>
         <div class="featured">
-          <div class="featured__card">
+          <div class="featured__card" data-aos="zoom-out-up" data-aos-delay="50">
             <div class="featured__image-card">
               <img class="featured__image" src="img/ok.svg" alt="Okey" width="32" height="32">
             </div>
@@ -345,7 +346,7 @@
               <p class="featured__content-text">Армакс МГ працює тільки з перевіреними постачальниками і виробникам</p>
             </div>
           </div>
-          <div class="featured__card">
+          <div class="featured__card" data-aos="zoom-out-up" data-aos-delay="450">
             <div class="featured__image-card">
               <img class="featured__image" src="img/service.svg" alt="service" width="32" height="32">
             </div>
@@ -355,7 +356,7 @@
               </p>
             </div>
           </div>
-          <div class="featured__card">
+          <div class="featured__card" data-aos="zoom-out-up" data-aos-delay="650">
             <div class="featured__image-card">
               <img class="featured__image" src="img/price.svg" alt="Okey" width="32" height="32">
             </div>
@@ -366,7 +367,7 @@
             </div>
 
           </div>
-          <div class="featured__card">
+          <div class="featured__card" data-aos="zoom-out-up" data-aos-delay="250">
             <div class="featured__image-card">
               <img class="featured__image" src="img/handshake.svg" alt="Okey" width="55" height="40">
             </div>
@@ -395,7 +396,7 @@
         </p>
 
         <div class="ware__box">
-          <article class="ware__card">
+          <article class="ware__card" data-aos="flip-left" data-aos-delay="150">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/table-legs.jpg" alt="table-legs" width="auto" height="220">
@@ -410,7 +411,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card">
+          <article class="ware__card" data-aos="flip-right" data-aos-delay="250">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/decorative-cut.jpg" alt="table-legs" width="auto" height="220">
@@ -425,7 +426,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card">
+          <article class="ware__card" data-aos="flip-left" data-aos-delay="350">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/furniture-accessories.jpg" alt="table-legs" width="auto" height="220">
@@ -440,7 +441,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card">
+          <article class="ware__card" data-aos="flip-right" data-aos-delay="450">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/grain-bucket.jpg" alt="table-legs" width="auto" height="220">
@@ -455,7 +456,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card">
+          <article class="ware__card" data-aos="flip-left" data-aos-delay="550">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/metal-bracket.jpg" alt="table-legs" width="auto" height="220">
@@ -470,7 +471,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card">
+          <article class="ware__card" data-aos="flip-right" data-aos-delay="650">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/metal-furniture.jpg" alt="table-legs" width="auto" height="220">
@@ -670,6 +671,7 @@
 
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="js/index.js"></script>
   <script src="js/swiper.js"></script>
 
