--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <section class="section services">
       <h3 class="section__title services__title">Наші послуги</h3>
       <div class="services__container">
-        <article class="services__card" data-aos="fade-down">
+        <article class="services__card" data-aos="fade-up">
           <figure class="services__content">
             <picture>
               <img class="services__img" src="img/lazer.jpg" alt="1" width="300" height="200">
@@ -250,7 +250,7 @@
             </figcaption>
           </figure>
         </article>
-        <article class="services__card" data-aos="fade-down">
+        <article class="services__card" data-aos="fade-up">
           <figure class="services__content">
             <picture>
               <img class="services__img" src="img/sheet-bending.jpg" alt="sheet-bending" width="300" height="200">
@@ -396,7 +396,7 @@
         </p>
 
         <div class="ware__box">
-          <article class="ware__card" data-aos="flip-left" data-aos-delay="150">
+          <article class="ware__card" data-aos="slide-up" data-aos-delay="150">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/table-legs.jpg" alt="table-legs" width="auto" height="220">
@@ -411,7 +411,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card" data-aos="flip-right" data-aos-delay="250">
+          <article class="ware__card" data-aos="slide-up" data-aos-delay="250">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/decorative-cut.jpg" alt="table-legs" width="auto" height="220">
@@ -426,7 +426,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card" data-aos="flip-left" data-aos-delay="350">
+          <article class="ware__card" data-aos="slide-up" data-aos-delay="350">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/furniture-accessories.jpg" alt="table-legs" width="auto" height="220">
@@ -441,7 +441,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card" data-aos="flip-right" data-aos-delay="450">
+          <article class="ware__card" data-aos="slide-up" data-aos-delay="150">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/grain-bucket.jpg" alt="table-legs" width="auto" height="220">
@@ -456,7 +456,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card" data-aos="flip-left" data-aos-delay="550">
+          <article class="ware__card" data-aos="slide-up" data-aos-delay="250">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/metal-bracket.jpg" alt="table-legs" width="auto" height="220">
@@ -471,7 +471,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card" data-aos="flip-right" data-aos-delay="650">
+          <article class="ware__card" data-aos="slide-up" data-aos-delay="350">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/metal-furniture.jpg" alt="table-legs" width="auto" height="220">
