--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="website icon" type="png" href="../img/pngegg.png">
 </head>
-
 
 <body>
   <svg style="display: none;">
@@ -121,9 +121,10 @@
 
     <div class="header__container container">
       <div class="menu">
-        <button class="burger-btn" href="#"><span></span></button>
-        <h1 class="menu__title"><a class="menu__link-logo" href="#"><img class="menu__logo" src=" img/logo.png"
-              alt=""></a></h1>
+        <button class="burger-btn"><span></span></button>
+        <h1 class="menu__title">
+          <a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt=""></a>
+        </h1>
         <nav class="nav">
           <div class="nav__inner">
             <ul class="nav__list">
@@ -211,7 +212,8 @@
         <p class="section__text">Надаємо комплекс послуг з обробки металу —
           <a class="preview__link" href="lazer.html">лазерна порізка,</a>
           <a class="preview__link" href="lazer.html">гнуття деталей,</a>
-          <a class="preview__link" href="lazer.html">зварювання</a>
+          <a class="preview__link" href="lazer.html">зварювання,</a>
+          <a class="preview__link" href="lazer.html">фарбування</a>
           металевих виробів та форм
           високої складності. Виробництво деталей для важкої і легкої промисловості, а також складних і відповідальних
           компонентів для точного обладнання.
@@ -337,7 +339,7 @@
           наших Клієнтів!!!
         </p>
         <div class="featured">
-          <div class="featured__card" data-aos="zoom-out-up" data-aos-delay="50">
+          <div class="featured__card" data-aos="zoom-in" data-aos-delay="50">
             <div class="featured__image-card">
               <img class="featured__image" src="img/ok.svg" alt="Okey" width="32" height="32">
             </div>
@@ -346,7 +348,7 @@
               <p class="featured__content-text">Армакс МГ працює тільки з перевіреними постачальниками і виробникам</p>
             </div>
           </div>
-          <div class="featured__card" data-aos="zoom-out-up" data-aos-delay="450">
+          <div class="featured__card" data-aos="zoom-in" data-aos-delay="450">
             <div class="featured__image-card">
               <img class="featured__image" src="img/service.svg" alt="service" width="32" height="32">
             </div>
@@ -356,7 +358,7 @@
               </p>
             </div>
           </div>
-          <div class="featured__card" data-aos="zoom-out-up" data-aos-delay="650">
+          <div class="featured__card" data-aos="zoom-in" data-aos-delay="650">
             <div class="featured__image-card">
               <img class="featured__image" src="img/price.svg" alt="Okey" width="32" height="32">
             </div>
@@ -367,7 +369,7 @@
             </div>
 
           </div>
-          <div class="featured__card" data-aos="zoom-out-up" data-aos-delay="250">
+          <div class="featured__card" data-aos="zoom-in" data-aos-delay="250">
             <div class="featured__image-card">
               <img class="featured__image" src="img/handshake.svg" alt="Okey" width="55" height="40">
             </div>
