--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         </p>
 
         <div class="ware__box">
-          <article class="ware__card" data-aos="slide-up" data-aos-delay="150">
+          <article class="ware__card" data-aos="zoom-in" data-aos-delay="150">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/table-legs.jpg" alt="table-legs" width="auto" height="220">
@@ -413,7 +413,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card" data-aos="slide-up" data-aos-delay="250">
+          <article class="ware__card" data-aos="zoom-in" data-aos-delay="250">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/decorative-cut.jpg" alt="table-legs" width="auto" height="220">
@@ -428,22 +428,22 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card" data-aos="slide-up" data-aos-delay="350">
+          <article class="ware__card" data-aos="zoom-in" data-aos-delay="350">
             <figure class="ware__content">
               <picture>
-                <img class="ware__img" src="img/furniture-accessories.jpg" alt="table-legs" width="auto" height="220">
+                <img class="ware__img" src="img/individual.jpg" alt="table-legs" width="auto" height="220">
 
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
                   <a class="ware__name-link" href="lazer.html">
-                    Меблева фурнітура
+                    Індивідуальні замовлення
                   </a>
                 </div>
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card" data-aos="slide-up" data-aos-delay="150">
+          <article class="ware__card" data-aos="zoom-in" data-aos-delay="150">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/grain-bucket.jpg" alt="table-legs" width="auto" height="220">
@@ -458,7 +458,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card" data-aos="slide-up" data-aos-delay="250">
+          <article class="ware__card" data-aos="zoom-in" data-aos-delay="250">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/metal-bracket.jpg" alt="table-legs" width="auto" height="220">
@@ -473,7 +473,7 @@
               </figcaption>
             </figure>
           </article>
-          <article class="ware__card" data-aos="slide-up" data-aos-delay="350">
+          <article class="ware__card" data-aos="zoom-in" data-aos-delay="350">
             <figure class="ware__content">
               <picture>
                 <img class="ware__img" src="img/metal-furniture.jpg" alt="table-legs" width="auto" height="220">
@@ -482,7 +482,7 @@
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
                   <a class="ware__name-link" href="lazer.html">
-                    Меблі з профільної труби
+                    Торгове обладнання
                   </a>
                 </div>
               </figcaption>
@@ -508,7 +508,7 @@
         <div class="partners__slider">
           <div class="swiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="img/modern-expo.png" alt="modern-expo" width="190" height="150"></div>
+              <!-- <div class="swiper-slide"><img src="img/modern-expo.png" alt="modern-expo" width="190" height="150"></div> -->
               <div class="swiper-slide"><img src="img/skf-logo.svg" alt="skf" width="190" height="150"></div>
               <div class="swiper-slide"><img src="img/ua-bruk.png" alt="ua-bruk" width="190" height="34"></div>
               <div class="swiper-slide"><img src="img/cvg-logo.png" alt="cvg" width="190" height="190">
