--- a/services.html
+++ b/services.html
@@ -74,93 +74,66 @@
 		</symbol>
 	</svg>
 
-	<header class="header header-pages">
+	<header class="header">
+		<div class="s-header__container container">
+			<div class="menu s-menu">
 
-		<div class="nav__social--desktop-wrap">
-			<div class="nav__social--desktop container">
-				<ul class="nav__social-list--desktop">
-					<li class="nav__social-item">
-						<a class="link-social" href="tel:+380687945051">
-							<svg class="link-social--svg" width="30" height="20">
-								<use xlink:href="#phone"></use>
-							</svg>
-							+38 (099) 132 45 67
-						</a>
-					</li>
-					<li class="nav__social-item">
-						<a href="mailto:lazerarmax@gmail.com" class="link-social">
-							<svg class="link-social--svg" width="30" height="20">
-								<use xlink:href="#mail"></use>
-							</svg>
-							lazer.armax@gmail.com
-						</a>
-					</li>
-				</ul>
-				<ul class="nav__social-list--desktop nav__social-list--svg">
-					<li class="nav__social-item">
-						<a href="https://www.facebook.com/armaxMG" class="link-social">
-							<svg class="link-social--svg" width="25" height="25">
-								<use xlink:href="#facebook"></use>
-							</svg>
-						</a>
-					</li>
-					<li class="nav__social-item">
-						<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-							class="link-social">
-							<svg class="link-social--svg" width="25" height="25">
-								<use xlink:href="#location"></use>
-							</svg>
-						</a>
-					</li>
-				</ul>
-			</div>
+				<div class="s-header__block">
+					<button class="burger-btn" href="#"><span></span></button>
 
-		</div>
+					<ul class="s-header__list-lang">
+						<li class="s-header__item-lang active"><button class="button-lang" disabled>Українська</button></li>
+						<li class="s-header__item-lang"><button class="button-lang">English</button></li>
+					</ul>
+				</div>
 
-		<div class="header__container container">
-			<div class="menu">
-
-				<button class="burger-btn" href="#"><span></span></button>
-
-				<ul class="header-pages__list">
-					<li class="nav__item-social">
-						<a class="link-social" href="tel:+380687945051">
-							<svg class="link-social--svg" width="30" height="20">
-								<use xlink:href="#phone"></use>
-							</svg>
-						</a>
-					</li>
-					<li class="nav__item-social">
-						<a href="mailto:lazerarmax@gmail.com" class="link-social">
-							<svg class="link-social--svg" width="30" height="20">
-								<use xlink:href="#mail"></use>
-							</svg>
-						</a>
-					</li>
-					<li class="nav__item-social">
-						<a href="https://www.facebook.com/armaxMG" class="link-social">
-							<svg class="link-social--svg" width="30" height="20">
-								<use xlink:href="#facebook"></use>
-							</svg>
-						</a>
-					</li>
-					<li class="nav__item-social">
-						<a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
-							class="link-social">
-							<svg class="link-social--svg" width="30" height="30">
-								<use xlink:href="#location"></use>
-							</svg>
-						</a>
-					</li>
-				</ul>
+				<div class="s-header__block">
+					<ul class="s-header__list-social">
+						<li class="s-header__item-social">
+							<a class="s-link-social" href="tel:+380687945051">
+								<svg class="s-link-social--svg" width="30" height="25">
+									<use xlink:href="#phone"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="s-header__item-social">
+							<a href="mailto:lazerarmax@gmail.com" class="s-link-social">
+								<svg class="s-link-social--svg" width="30" height="25">
+									<use xlink:href="#mail"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="s-header__item-social">
+							<h1 class="menu__title">
+								<a class="menu__link-logo" href="index.html"><img class="s-menu__logo" src=" img/logo.png" alt=""
+										width="120"></a>
+							</h1>
+						</li>
+						<li class="s-header__item-social">
+							<a href="https://www.facebook.com/armaxMG" class="s-link-social">
+								<svg class="s-link-social--svg" width="30" height="25">
+									<use xlink:href="#facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="s-header__item-social">
+							<a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
+								class="s-link-social">
+								<svg class="s-link-social--svg" width="30" height="35">
+									<use xlink:href="#location"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
 
 
-				<h1 class="menu__title">
-					<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt=""></a>
-				</h1>
-				<nav class="nav">
-					<div class="nav__inner">
-						<ul class="nav__list">
+
+				</div>
+
+
+				<nav class="nav s-nav">
+					<div class="nav__inner s-nav__inner">
+						<ul class="nav__list s-nav__list">
 							<li class="nav__item">
 								<a href="services.html" class="link-hover">Послуги</a>
 							</li>
